--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -31,6 +31,7 @@ jobs:
           cache: "pnpm"
       - name: Install dependencies
         run: pnpm install
-      - name: Running project
-      - run: pnpm run build --if-present
-      - run: pnpm start
+      - name: Build project
+        run: pnpm run build --if-present
+      - name: Start project
+        run: pnpm start
