--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -29,7 +29,7 @@ jobs:
           cache: "pnpm"
       - name: Install dependencies
         run: pnpm install
-      - name: Build project
-        run: pnpm run build --if-present
+      - name: Test project
+        run: pnpm test
       - name: Start project
         run: pnpm start
