fix: generate prisma client before test

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -46,6 +46,8 @@ jobs:
           cache: "pnpm"
       - name: Install dependencies
         run: pnpm install
+      - name: Generating Prisma Client
+        run: npx prisma generate
       - name: Deploying Database
         run: npx prisma migrate deploy
       - name: Run Tests
